# fastapi-on-render-hosting

./: README.md  pyproject.toml
src/api/: api.py
