[tool.poetry]
name = "fastapi-on-render-hosting"
version = "1.0.0"
description = "A FastAPI project with poetry and render hosting."
authors = ["Dor Sloim <dorsloim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
